# ocular

./: .coverage  .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  ocular_logging.py  ocular_settings.py  pyproject.toml  saved_store.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
broker/: __init__.py  gc.py  launcher.py  main.py  queue.py  sessions.py
bus/: queue.py  sessions.py
deploy/: .env.example  Dockerfile.broker  Dockerfile.test  Dockerfile.test.dockerignore  Dockerfile.web  docker-compose.yml  gateway.conf
docs/: DEPLOY-SECURITY.md  ROADMAP.md
docs/superpowers/plans/: 2026-07-12-ocular-correctness-obs-hardening.md  2026-07-12-ocular-fondation-runner-analyse.md  2026-07-12-ocular-passe-2.5-ui-utilisabilite.md  2026-07-12-ocular-phase3a-capture-recon.md  2026-07-12-ocular-saved-analyses.md  2026-07-13-ocular-phase3b-interactive-gateway.md  2026-07-13-ocular-phase3c-dynamic-scripted.md  2026-07-13-ocular-phase3d1-correctness-ux.md  2026-07-13-ocular-phase3d2b-turnstile-fix.md  2026-07-13-ocular-phase3d2c-interactive-lifecycle.md  2026-07-13-ocular-phase3d2i-soc-filter.md  2026-07-13-ocular-phase3d2j-verdict-recalibration.md  2026-07-13-ocular-phase3e-identity-analyst-verdict.md  2026-07-13-ocular-phase3f-tech-debt.md  2026-07-13-ocular-phase3g-ssrf-egress-guard.md  2026-07-13-ocular-phase3h-idp-admin-group.md  2026-07-18-isolation-reseau-session.md  2026-07-18-triage-ia-ocular.md
docs/superpowers/specs/: 2026-07-12-ocular-correctness-obs-hardening-design.md  2026-07-12-ocular-moteur-unifie-design.md  2026-07-12-ocular-passe-2.5-ui-utilisabilite-design.md  2026-07-12-ocular-phase3a-capture-recon-design.md  2026-07-12-ocular-saved-analyses-design.md  2026-07-13-ocular-phase3b-interactive-gateway-design.md  2026-07-13-ocular-phase3c-dynamic-scripted-design.md  2026-07-13-ocular-phase3e-identity-analyst-verdict-design.md  2026-07-18-isolation-reseau-session-design.md  2026-07-18-triage-ia-ocular-design.md
engine/: artifacts.py  browser_js.py  browser_prefs.py  egress_guard.py  egress_policy.py  result.py  ssrf.py  static.py  steps.py  triage.py  triage_weights.py  urlnorm.py  verdict.py  wrapper.py
runner_analysis/: Dockerfile  render.py
runner_recon/: Dockerfile  __init__.py  capture.py  entrypoint_recon.sh  steps_exec.py  vision.py
runner_recon_vnc/: Dockerfile  entrypoint_vnc.sh  session_server.py
schemas/: result.schema.json  seccomp-analysis.README.md  seccomp-analysis.json  seccomp-recon.README.md
tests/: conftest.py  filter_test.mjs  test_artifacts.py  test_broker_failure.py  test_broker_main.py  test_broker_session_cmds.py  test_broker_sessions.py  test_browser_prefs.py  test_calibrate.py  test_capture_logic.py  test_capture_resilience.py  test_capture_scripted_logic.py  test_deploy_images.py  test_dockerfile.py  test_e2e.py  test_egress_guard.py  test_egress_integration.py  test_filter_js.py  test_gc.py  test_identity.py  test_isolation_reach_guard.py  test_launcher_capture.py  test_launcher_scripted.py  test_launcher_security.py  test_launcher_store.py  test_logging.py  test_queue.py  test_reaper_e2e.py  test_recon_dockerfile.py  test_recon_vnc_dockerfile.py  test_render.py  test_result_schema.py  test_runner_scripted_integration.py  test_saved_admin.py  test_saved_api.py  test_saved_store.py  test_session_cmd_queue.py  test_session_isolation_integration.py  test_session_ownership.py  test_session_readiness.py  (+24 more)
tools/: calibrate_triage.py
web/: app.py  identity.py  internal_http.py  llm.py  middleware.py  models.py
web/ui/: api.js  boot.js  core.js  filter.js  i18n.js  index.html  manifest.webmanifest  state.js  style.css  sw.js  triage.js
web/ui/views/: admin.js  detail.js  interactive.js  jobs.js  login.js  saved.js  submit.js
