[project]
name = "ocular"
version = "0.1.0"
description = "Moteur unifié de capture + analyse web durci (recon anti-bot, analyse HTML hostile)"
readme = "README.md"
requires-python = ">=3.11"
# Le code propre au projet est sous LGPL-3.0-or-later. Les composants tiers
# EMBARQUÉS (noVNC en MPL-2.0, pako en MIT) restent sous leur propre licence :
# cf. THIRD-PARTY-NOTICES.md. Cette clé ne décrit QUE le code du projet.
license = "LGPL-3.0-or-later"
license-files = ["COPYING", "COPYING.LESSER"]
dependencies = [
  "pydantic>=2.6",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "redis>=5.0",
  "playwright>=1.41",
  "jsonschema>=4.21",
  "websockets>=12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "fakeredis>=2.21", "httpx>=0.27", "ruff>=0.3", "mypy>=1.9", "numpy>=1.26"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-m 'not integration'"
asyncio_mode = "auto"
markers = [
  "integration: requires external tooling — Playwright + Chromium (playwright install chromium) and/or a working Docker daemon",
]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
